# netsentrix

./: .gitignore  LICENSE  Makefile  README.md  package-lock.json
.github/workflows/: ci.yml
app/: Package.swift
app/App/: AppSettingsView.swift  MenuBarView.swift  NetSentrixApp.swift  PlaceholderSupport.swift  RootView.swift  Theme.swift
app/Models/: APIModels.swift  DomainPattern.swift  HealthModels.swift
docs/: QUERIES_UI_DEBUG.md  api.md  architecture.md  roadmap.md  sniffer-permissions.md  storage-schema.md
engine/: Cargo.toml
engine/src/: main.rs
engine/src/alerts/: classification.rs  minimal.rs  mod.rs
engine/src/api/: auth.rs  mod.rs  models.rs  protection.rs  routes.rs  server.rs  setup_hints.rs  websocket.rs
engine/src/config/: defaults.rs  loader.rs  mod.rs  schema.rs
engine/src/device/: discovery.rs  fingerprint.rs  manager.rs  mod.rs  models.rs
engine/src/dns/: cache.rs  filter.rs  mod.rs  models.rs  parser.rs  responder.rs  response.rs  server.rs  upstream.rs
engine/src/enrich/: asn.rs  geoip.rs  mod.rs  models.rs  reverse_dns.rs
engine/src/events/: bus.rs  models.rs
engine/src/intelligence/: mod.rs
engine/src/policy/: mod.rs
engine/src/rules/: alerting.rs  dns_rules.rs  engine.rs  mod.rs  models.rs  traffic_rules.rs
engine/src/sniffer/: capture.rs  mod.rs  models.rs  normalize.rs  pipeline.rs
engine/src/storage/: alerts.rs  db.rs  devices.rs  feedback.rs  migrations.rs  mod.rs  queries.rs  schema.rs  time_overrides.rs
engine/src/system/: mod.rs  network.rs  paths.rs  permissions.rs  runtime.rs
engine/src/utils/: mod.rs
(+45 files in other folders)
