[package]
name = "netsentrix-engine"
version = "0.1.0"
edition = "2021"
description = "NetSentrix Core — local DNS and control plane daemon"
publish = false

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros", "json", "ws"] }
dirs = "5"
futures-util = "0.3"
hex = "0.4"
if-addrs = "0.13"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.32", features = ["bundled"] }
